# livekit-cpp

./: .gitignore  CMakeLists.txt  LICENSE
include/: ffi_client.hpp
src/example/: CMakeLists.txt  example.cpp
src/livekit-cpp/: CMakeLists.txt
src/livekit-cpp/src/: ffi_client.cpp
